// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a default dialog modal 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  background-color: white;
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  border: 1px solid #e6e6e6;
}

.c0 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 998;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  -moz-tap-highlight-color: rgba(0,0,0,0);
  background-color: black;
  opacity: 0.4;
}

.c0[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c3 {
  -webkit-transform: translate3d(-50%,-50%,0px);
  -ms-transform: translate3d(-50%,-50%,0px);
  transform: translate3d(-50%,-50%,0px);
  position: fixed;
  z-index: 19900410;
  left: 50%;
  top: 50%;
}

.c3[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c2 {
  padding: 0 1rem;
  max-width: 600px;
  width: 100%;
}

.c6 {
  padding: 1.25rem;
  max-height: 50vh;
  overflow-y: scroll;
  width: 100%;
}

.c4 {
  border-radius: 5px;
}

.c4:focus {
  outline: unset;
}

<portal
  class=""
>
  <div>
    <button
      aria-hidden="false"
      class="c0 c1 "
      role="button"
      tabindex="-1"
    />
    <div
      aria-hidden="false"
      aria-modal="true"
      class="c2 c3 c1"
      role="dialog"
    >
      <div
        aria-describedby="Modal-3"
        aria-labelledby="Modal-4"
        class="c4 c5 c1"
        role="dialog"
        style="width: 100%;"
        tabindex="-1"
        width="100%"
      >
        <div
          class="c6 c1"
          id="Modal-3"
        >
          This is the content
        </div>
      </div>
    </div>
  </div>
</portal>
`;

exports[`renders correctly for a dialog modal with a close button 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c11 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c11:focus:not(:focus-visible) {
  outline: none;
}

.c14 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #435a6f;
  fill: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #b3b3b3;
}

.c10:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #444bc9 0px 0px 0px 2px;
}

.c10[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c10 {
  border: 0;
  background: unset;
  color: #435a6f;
  fill: #435a6f;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c10:hover {
  color: #000;
  fill: #000;
}

.c8 {
  font-weight: 700;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.heading.c8 + .sub-heading {
  margin-top: -1rem;
}

.c8:last-child {
  margin-bottom: 0;
}

h1.c8 {
  font-size: 3rem;
}

h2.c8 {
  font-size: 2.5rem;
}

h3.c8 {
  font-size: 2rem;
}

h4.c8 {
  font-size: 1.5rem;
}

h5.c8 {
  font-size: 1.25rem;
}

h6.c8 {
  font-size: 1rem;
}

.c8 .c13 {
  top: 0.15em;
}

.c8 {
  font-weight: 600;
}

.c5 {
  background-color: white;
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  border: 1px solid #e6e6e6;
}

.c12 {
  border: 0px;
  -webkit-clip: rect(0px,0px,0px,0px);
  clip: rect(0px,0px,0px,0px);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0px;
  overflow: hidden;
  position: absolute;
}

.c0 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 998;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  -moz-tap-highlight-color: rgba(0,0,0,0);
  background-color: black;
  opacity: 0.4;
}

.c0[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c3 {
  -webkit-transform: translate3d(-50%,-50%,0px);
  -ms-transform: translate3d(-50%,-50%,0px);
  transform: translate3d(-50%,-50%,0px);
  position: fixed;
  z-index: 19900410;
  left: 50%;
  top: 50%;
}

.c3[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c2 {
  padding: 0 1rem;
  max-width: 600px;
  width: 100%;
}

.c15 {
  padding: 1.25rem;
  max-height: 50vh;
  overflow-y: scroll;
  width: 100%;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f2f2f2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 1.25rem;
  width: 100%;
}

.c7 {
  margin-bottom: 0px;
}

.c9 {
  height: 2em;
  width: 2em;
  padding: 0px;
}

.c9:hover {
  background-color: #f2f2f2;
}

.c4 {
  border-radius: 5px;
}

.c4:focus {
  outline: unset;
}

<portal
  class=""
>
  <div>
    <button
      aria-hidden="false"
      class="c0 c1 "
      role="button"
      tabindex="-1"
    />
    <div
      aria-hidden="false"
      aria-modal="true"
      class="c2 c3 c1"
      role="dialog"
    >
      <div
        aria-describedby="Modal-3"
        aria-labelledby="Modal-4"
        class="c4 c5 c1"
        role="dialog"
        style="width: 100%;"
        tabindex="-1"
        width="100%"
      >
        <div
          class="c6 c1"
        >
          <h5
            class="c7 sub-heading c8 c1"
            id="Modal-4"
          >
            This is a title
          </h5>
          <button
            class="c9 c10 c11"
            kind="link"
            type="button"
          >
            <div
              class="c12 c1"
            >
              Close
            </div>
            <svg
              aria-hidden="true"
              class="c13 c14 c1"
              role="img"
              size="1"
              style="size: 1px;"
              viewBox="0 0 352 512"
            >
              <path
                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          class="c15 c1"
          id="Modal-3"
        >
          This is the content
        </div>
      </div>
    </div>
  </div>
</portal>
`;

exports[`renders correctly for a dialog modal with a footer 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  font-weight: 700;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.heading.c8 + .sub-heading {
  margin-top: -1rem;
}

.c8:last-child {
  margin-bottom: 0;
}

h1.c8 {
  font-size: 3rem;
}

h2.c8 {
  font-size: 2.5rem;
}

h3.c8 {
  font-size: 2rem;
}

h4.c8 {
  font-size: 1.5rem;
}

h5.c8 {
  font-size: 1.25rem;
}

h6.c8 {
  font-size: 1rem;
}

.c8 .c11 {
  top: 0.15em;
}

.c8 {
  font-weight: 600;
}

.c5 {
  background-color: white;
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  border: 1px solid #e6e6e6;
}

.c0 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 998;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  -moz-tap-highlight-color: rgba(0,0,0,0);
  background-color: black;
  opacity: 0.4;
}

.c0[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c3 {
  -webkit-transform: translate3d(-50%,-50%,0px);
  -ms-transform: translate3d(-50%,-50%,0px);
  transform: translate3d(-50%,-50%,0px);
  position: fixed;
  z-index: 19900410;
  left: 50%;
  top: 50%;
}

.c3[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c2 {
  padding: 0 1rem;
  max-width: 600px;
  width: 100%;
}

.c9 {
  padding: 1.25rem;
  max-height: 50vh;
  overflow-y: scroll;
  width: 100%;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f2f2f2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 1.25rem;
  width: 100%;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f2f2f2;
  padding: 1rem 1rem;
  width: 100%;
}

.c7 {
  margin-bottom: 0px;
}

.c4 {
  border-radius: 5px;
}

.c4:focus {
  outline: unset;
}

<portal
  class=""
>
  <div>
    <button
      aria-hidden="false"
      class="c0 c1 "
      role="button"
      tabindex="-1"
    />
    <div
      aria-hidden="false"
      aria-modal="true"
      class="c2 c3 c1"
      role="dialog"
    >
      <div
        aria-describedby="Modal-3"
        aria-labelledby="Modal-4"
        class="c4 c5 c1"
        role="dialog"
        style="width: 100%;"
        tabindex="-1"
        width="100%"
      >
        <div
          class="c6 c1"
        >
          <h5
            class="c7 sub-heading c8 c1"
            id="Modal-4"
          >
            This is a title
          </h5>
        </div>
        <div
          class="c9 c1"
          id="Modal-3"
        >
          This is the content
        </div>
        <div
          class="c10 c1"
          style="justify-content: space-between;"
        >
          <div
            class="c1"
          >
            This is a footer
          </div>
        </div>
      </div>
    </div>
  </div>
</portal>
`;

exports[`renders correctly for a dialog modal with a title 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  font-weight: 700;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.heading.c8 + .sub-heading {
  margin-top: -1rem;
}

.c8:last-child {
  margin-bottom: 0;
}

h1.c8 {
  font-size: 3rem;
}

h2.c8 {
  font-size: 2.5rem;
}

h3.c8 {
  font-size: 2rem;
}

h4.c8 {
  font-size: 1.5rem;
}

h5.c8 {
  font-size: 1.25rem;
}

h6.c8 {
  font-size: 1rem;
}

.c8 .c10 {
  top: 0.15em;
}

.c8 {
  font-weight: 600;
}

.c5 {
  background-color: white;
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  border: 1px solid #e6e6e6;
}

.c0 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 998;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  -moz-tap-highlight-color: rgba(0,0,0,0);
  background-color: black;
  opacity: 0.4;
}

.c0[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c3 {
  -webkit-transform: translate3d(-50%,-50%,0px);
  -ms-transform: translate3d(-50%,-50%,0px);
  transform: translate3d(-50%,-50%,0px);
  position: fixed;
  z-index: 19900410;
  left: 50%;
  top: 50%;
}

.c3[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c2 {
  padding: 0 1rem;
  max-width: 600px;
  width: 100%;
}

.c9 {
  padding: 1.25rem;
  max-height: 50vh;
  overflow-y: scroll;
  width: 100%;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f2f2f2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 1.25rem;
  width: 100%;
}

.c7 {
  margin-bottom: 0px;
}

.c4 {
  border-radius: 5px;
}

.c4:focus {
  outline: unset;
}

<portal
  class=""
>
  <div>
    <button
      aria-hidden="false"
      class="c0 c1 "
      role="button"
      tabindex="-1"
    />
    <div
      aria-hidden="false"
      aria-modal="true"
      class="c2 c3 c1"
      role="dialog"
    >
      <div
        aria-describedby="Modal-3"
        aria-labelledby="Modal-4"
        class="c4 c5 c1"
        role="dialog"
        style="width: 100%;"
        tabindex="-1"
        width="100%"
      >
        <div
          class="c6 c1"
        >
          <h5
            class="c7 sub-heading c8 c1"
            id="Modal-4"
          >
            This is a title
          </h5>
        </div>
        <div
          class="c9 c1"
          id="Modal-3"
        >
          This is the content
        </div>
      </div>
    </div>
  </div>
</portal>
`;

exports[`renders correctly for a dialog modal with action buttons 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c13 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c13:focus:not(:focus-visible) {
  outline: none;
}

.c15 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #444bc9;
  color: inherit;
}

.c15:focus:not(:focus-visible) {
  outline: none;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #435a6f;
  fill: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #b3b3b3;
}

.c12:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #444bc9 0px 0px 0px 2px;
}

.c12[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c12:hover {
  background-color: #efefef;
}

.c12:hover:active {
  background-color: #e3e3e3;
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #444bc9;
  border-radius: 4px;
  color: #fff;
  fill: #fff;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c14:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #7c81d9 0px 0px 0px 2px;
}

.c14[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c14:hover {
  background-color: #373ebd;
}

.c14:hover:active {
  background-color: #3137a9;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.c11 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.c8 {
  font-weight: 700;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.heading.c8 + .sub-heading {
  margin-top: -1rem;
}

.c8:last-child {
  margin-bottom: 0;
}

h1.c8 {
  font-size: 3rem;
}

h2.c8 {
  font-size: 2.5rem;
}

h3.c8 {
  font-size: 2rem;
}

h4.c8 {
  font-size: 1.5rem;
}

h5.c8 {
  font-size: 1.25rem;
}

h6.c8 {
  font-size: 1rem;
}

.c8 .c16 {
  top: 0.15em;
}

.c8 {
  font-weight: 600;
}

.c5 {
  background-color: white;
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  border: 1px solid #e6e6e6;
}

.c0 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 998;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  -moz-tap-highlight-color: rgba(0,0,0,0);
  background-color: black;
  opacity: 0.4;
}

.c0[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c3 {
  -webkit-transform: translate3d(-50%,-50%,0px);
  -ms-transform: translate3d(-50%,-50%,0px);
  transform: translate3d(-50%,-50%,0px);
  position: fixed;
  z-index: 19900410;
  left: 50%;
  top: 50%;
}

.c3[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c2 {
  padding: 0 1rem;
  max-width: 600px;
  width: 100%;
}

.c9 {
  padding: 1.25rem;
  max-height: 50vh;
  overflow-y: scroll;
  width: 100%;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f2f2f2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 1.25rem;
  width: 100%;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f2f2f2;
  padding: 1rem 1rem;
  width: 100%;
}

.c7 {
  margin-bottom: 0px;
}

.c4 {
  border-radius: 5px;
}

.c4:focus {
  outline: unset;
}

<portal
  class=""
>
  <div>
    <button
      aria-hidden="false"
      class="c0 c1 "
      role="button"
      tabindex="-1"
    />
    <div
      aria-hidden="false"
      aria-modal="true"
      class="c2 c3 c1"
      role="dialog"
    >
      <div
        aria-describedby="Modal-3"
        aria-labelledby="Modal-4"
        class="c4 c5 c1"
        role="dialog"
        style="width: 100%;"
        tabindex="-1"
        width="100%"
      >
        <div
          class="c6 c1"
        >
          <h5
            class="c7 sub-heading c8 c1"
            id="Modal-4"
          >
            This is a title
          </h5>
        </div>
        <div
          class="c9 c1"
          id="Modal-3"
        >
          This is the content
        </div>
        <div
          class="c10 c1"
          style="justify-content: flex-end;"
        >
          <div
            class="c1"
          >
            <div
              class="c11 c1"
              spacing="minor-2"
            >
              <button
                class="c12 c13 "
                kind="default"
                type="button"
              >
                Cancel
              </button>
              <button
                class="c14 c15"
                kind="default"
                type="button"
              >
                Submit
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</portal>
`;

exports[`renders correctly for a dialog modal with kind alert 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c10:focus:not(:focus-visible) {
  outline: none;
}

.c12 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #444bc9;
  color: inherit;
}

.c12:focus:not(:focus-visible) {
  outline: none;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #435a6f;
  fill: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #b3b3b3;
}

.c9:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #444bc9 0px 0px 0px 2px;
}

.c9[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c9:hover {
  background-color: #efefef;
}

.c9:hover:active {
  background-color: #e3e3e3;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #444bc9;
  border-radius: 4px;
  color: #fff;
  fill: #fff;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c11:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #7c81d9 0px 0px 0px 2px;
}

.c11[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c11:hover {
  background-color: #373ebd;
}

.c11:hover:active {
  background-color: #3137a9;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.c8 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.c5 {
  background-color: white;
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  border: 1px solid #e6e6e6;
}

.c0 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 998;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  -moz-tap-highlight-color: rgba(0,0,0,0);
  background-color: black;
  opacity: 0.4;
}

.c0[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c3 {
  -webkit-transform: translate3d(-50%,-50%,0px);
  -ms-transform: translate3d(-50%,-50%,0px);
  transform: translate3d(-50%,-50%,0px);
  position: fixed;
  z-index: 19900410;
  left: 50%;
  top: 50%;
}

.c3[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c2 {
  padding: 0 1rem;
  max-width: 600px;
  width: 100%;
}

.c6 {
  padding: 1.25rem;
  max-height: 50vh;
  overflow-y: scroll;
  width: 100%;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f2f2f2;
  padding: 1rem 1rem;
  width: 100%;
}

.c4 {
  border-radius: 5px;
}

.c4:focus {
  outline: unset;
}

<portal
  class=""
>
  <div>
    <div
      aria-hidden="false"
      class="c0 c1"
      role="button"
      tabindex="-1"
    />
    <div
      aria-hidden="false"
      aria-modal="true"
      class="c2 c3 c1"
      role="dialog"
    >
      <div
        aria-describedby="Modal-3"
        aria-labelledby="Modal-4"
        class="c4 c5 c1"
        role="alertdialog"
        style="width: 100%;"
        tabindex="-1"
        width="100%"
      >
        <div
          class="c6 c1"
          id="Modal-3"
        >
          This is the content
        </div>
        <div
          class="c7 c1"
          style="justify-content: flex-end;"
        >
          <div
            class="c1"
          >
            <div
              class="c8 c1"
              spacing="minor-2"
            >
              <button
                class="c9 c10 "
                kind="default"
                type="button"
              >
                Cancel
              </button>
              <button
                class="c11 c12"
                kind="default"
                type="button"
              >
                Submit
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</portal>
`;

exports[`renders correctly for a dialog modal with type 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  background-color: white;
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  border: 1px solid #e6e6e6;
}

.c0 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 998;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  -moz-tap-highlight-color: rgba(0,0,0,0);
  background-color: black;
  opacity: 0.4;
}

.c0[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c3 {
  -webkit-transform: translate3d(-50%,-50%,0px);
  -ms-transform: translate3d(-50%,-50%,0px);
  transform: translate3d(-50%,-50%,0px);
  position: fixed;
  z-index: 19900410;
  left: 50%;
  top: 50%;
}

.c3[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c2 {
  padding: 0 1rem;
  max-width: 600px;
  width: 100%;
}

.c6 {
  padding: 1.25rem;
  max-height: 50vh;
  overflow-y: scroll;
  width: 100%;
}

.c4 {
  border-radius: 5px;
}

.c4:focus {
  outline: unset;
}

<portal
  class=""
>
  <div>
    <button
      aria-hidden="false"
      class="c0 c1 "
      role="button"
      tabindex="-1"
    />
    <div
      aria-hidden="false"
      aria-modal="true"
      class="c2 c3 c1"
      role="dialog"
    >
      <div
        aria-describedby="Modal-3"
        aria-labelledby="Modal-4"
        class="c4 c5 c1"
        role="dialog"
        style="width: 100%;"
        tabindex="-1"
        width="100%"
      >
        <div
          class="c6 c1"
          id="Modal-3"
        >
          This is the content
        </div>
      </div>
    </div>
  </div>
</portal>
`;
